--- a/classificacao_com_redes_neurais_feedfoward.ipynb
+++ b/classificacao_com_redes_neurais_feedfoward.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM/yWSg8Henwhlvu9EgETKk",
+      "authorship_tag": "ABX9TyPZg533yxFke5/HeravbHfh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,6 +33,41 @@
       ],
       "metadata": {
         "id": "aejzkXkm5j2-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "***Objetivo***: Utilizando um conjunto de dados contendo várias imagens de peças de roupa, criar uma rede neural *Perceptron Multicamadas (MLP)*  capaz de reconhecer e classificar corretamente cada tipo de peça."
+      ],
+      "metadata": {
+        "id": "MJCtvvmZSGZt"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "***Arquitetura da rede neural***: Como tarefa é de uma classificação multiclasse, o recomendado é que tenha:  \n",
+        "\n",
+        "\n",
+        "*   Um neurônio para cada característica de entrada\n",
+        "*   Entre 1 e 5 camadas ocultas\n",
+        "*   Entre 10 a 100 neurônios por camada oculta\n",
+        "*   1 neurônio de saída por classe\n",
+        "*   Ativação da camada de saída softmax\n",
+        "*   Função de perda de entropia cruzada"
+      ],
+      "metadata": {
+        "id": "qhs1aiEuUC7A"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "***Dataset***: Fashion MNIST é um dataset substituto direto do MNIST, contendo o mesmo formato: 70 mil imagens pré-processadas em escala de cinza 28x28 pixels cada, com 10 classes diferentes."
+      ],
+      "metadata": {
+        "id": "Tt_QqnsEVv7P"
       }
     },
     {
@@ -149,9 +184,9 @@
         "X_treino, X_validacao, Y_treino, Y_validacao = train_test_split(\n",
         "    X_treino_completo,\n",
         "    Y_treino_completo,\n",
-        "    test_size=5000,  # ou 0.1 para 10%\n",
+        "    test_size=5000,\n",
         "    random_state=42,\n",
-        "    stratify=Y_treino_completo  # mantém proporção de classes\n",
+        "    stratify=Y_treino_completo\n",
         ")\n",
         "\n",
         "# Normalização APÓS a divisão\n",
