--- a/classificacao_com_redes_neurais_feedfoward.ipynb
+++ b/classificacao_com_redes_neurais_feedfoward.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPZg533yxFke5/HeravbHfh",
+      "authorship_tag": "ABX9TyPU+wS+HoakYMJrDFY/XxlS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -114,6 +114,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Podemos carregar o conjunto Fashion MNIST usando o Keras"
+      ],
+      "metadata": {
+        "id": "UZqbIl7uXsnN"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "fashion = keras.datasets.fashion_mnist\n",
@@ -124,6 +133,15 @@
       },
       "execution_count": 82,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "O Keras inicializa a imagem representada como uma matriz 28x28"
+      ],
+      "metadata": {
+        "id": "gEqUDhL1bWbc"
+      }
     },
     {
       "cell_type": "code",
@@ -152,6 +170,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "As intensidades dos pixels são representadas como inteiros ao invés de floats"
+      ],
+      "metadata": {
+        "id": "et7Ne3O5brmi"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "X_treino_completo.dtype"
@@ -178,9 +205,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Criando um conjunto de validação e escalonando as intensidades de pixels até o intervalo de 1 a 0 e dividindo-as por 255.0 (também transformando-as em float) por conta do treinamento com gradiente descendente"
+      ],
+      "metadata": {
+        "id": "VrvUJ-sDcpgS"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# Aleatoriza e divide mantendo a distribuição das classes\n",
         "X_treino, X_validacao, Y_treino, Y_validacao = train_test_split(\n",
         "    X_treino_completo,\n",
         "    Y_treino_completo,\n",
@@ -201,6 +236,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Adicionando o nome das classes..."
+      ],
+      "metadata": {
+        "id": "dP_7E7Zle7cf"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "classes = [\"T-Shirt\", \"Calças\", \"Suéter\", \"Vestido\", \"Casaco\", \"Sandália\", \"Camisa\", \"Tênis\", \"Bolsa\", \"Bota\"]"
@@ -210,6 +254,15 @@
       },
       "execution_count": 86,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Para confirmar se as classes estão corretas..."
+      ],
+      "metadata": {
+        "id": "IwM9i1wXfLDK"
+      }
     },
     {
       "cell_type": "code",
@@ -273,6 +326,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "A classe nomeada de fato corresponde à imagem"
+      ],
+      "metadata": {
+        "id": "WBV9sWXJfRSY"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## Criando o modelo com a Sequential API"
       ],
       "metadata": {
@@ -280,33 +342,38 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Construindo a rede neural..."
+      ],
+      "metadata": {
+        "id": "fBMKDOIFftwS"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "modelo = keras.models.Sequential([\n",
-        "    keras.layers.Flatten(input_shape=[28,28]),\n",
-        "    keras.layers.Dense(300, activation=\"relu\"),\n",
-        "    keras.layers.Dense(100, activation=\"relu\"),\n",
-        "    keras.layers.Dense(10, activation=\"softmax\")\n",
+        "modelo = keras.models.Sequential([ # cria um modelo Sequential, constituída de uma pilha de camadas sequencialmente conectadas\n",
+        "    keras.layers.Flatten(input_shape=[28,28]), # converte cada entrada em uma matriz 1D\n",
+        "    keras.layers.Dense(300, activation=\"relu\"), # camada oculta com 300 neurônios e função de ativação ReLU\n",
+        "    keras.layers.Dense(100, activation=\"relu\"), # camada oculta com 100 neurônios e função de ativação ReLU\n",
+        "    keras.layers.Dense(10, activation=\"softmax\") # ativação da camada de saída softmax\n",
         "])"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "MwtTcW-M-FE4",
-        "outputId": "bfdc90ee-2faa-483d-e1b2-ce475a52d483"
+        "id": "MwtTcW-M-FE4"
       },
-      "execution_count": 89,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.11/dist-packages/keras/src/layers/reshaping/flatten.py:37: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
-            "  super().__init__(**kwargs)\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Exibindo todas as camadas do modelo:"
+      ],
+      "metadata": {
+        "id": "ZPuhGSKNiF7w"
+      }
     },
     {
       "cell_type": "code",
@@ -411,6 +478,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "A primeira camada Dense tem pesos de conexão de 784 x 300 e 300 vieses, que somam juntos 235.500 parâmetros. Isso viabiliza bastante flexibilidade para ajustar os dados de treinamento, mas faz com que talvez o modelo corra o risco de se sobreajustar"
+      ],
+      "metadata": {
+        "id": "o9NnY-ZdiYun"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Outra forma de observar a arquitetura do modelo:"
+      ],
+      "metadata": {
+        "id": "nRYzayo5mCh4"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "tf.keras.utils.plot_model(modelo, \"arquitetura_do_modelo.png\", show_shapes=True, dpi=60)"
@@ -437,6 +522,15 @@
           "execution_count": 91
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Vou acessar a lista de modelos para selecionar a primeira camada oculta"
+      ],
+      "metadata": {
+        "id": "_z5MkgIKmYdU"
+      }
     },
     {
       "cell_type": "code",
@@ -477,6 +571,15 @@
       },
       "execution_count": 93,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Observando os pesos e vieses da primeira camada oculta"
+      ],
+      "metadata": {
+        "id": "L5GbYkkompPr"
+      }
     },
     {
       "cell_type": "code",
@@ -528,6 +631,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Pesos inicializados aleatóriamente para quebrar a simetria"
+      ],
+      "metadata": {
+        "id": "-JPWnmSdmw1g"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "pesos.shape"
@@ -552,6 +664,15 @@
           "execution_count": 96
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Vieses inicializados em 0, como padrão"
+      ],
+      "metadata": {
+        "id": "AJoiiXGEnGfO"
+      }
     },
     {
       "cell_type": "code",
@@ -632,6 +753,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Chamando o método compile para especificar a função de perda e o otimizador utilizado"
+      ],
+      "metadata": {
+        "id": "lidXRB1NnLeI"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "modelo.compile(loss=\"sparse_categorical_crossentropy\",\n",
@@ -643,6 +773,15 @@
       },
       "execution_count": 99,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\"sparse_categorical_crossentropy\" foi escolhida pois os rótulos do dataset são esparsos e as classes são exclusivas. O otimizador \"sgd\" foi escolhido pois o modelo será treinado usando um gradiente descendente estocástico simples, logo, o Keras rodará o algoritmo de retropropagação"
+      ],
+      "metadata": {
+        "id": "W5FZe8tyneYA"
+      }
     },
     {
       "cell_type": "markdown",
@@ -737,6 +876,83 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Épocas 1–5:\n",
+        "*  Perda (loss) cai rapidamente de 1.00 para 0.41\n",
+        "*  Acurácia de treino sobe bem de 68% para 85%\n",
+        "*  Acurácia de validação também sobe de 82% para 87%\n",
+        "\n",
+        "Sinal de que a arquitetura e os hiperparâmetros estão bem ajustados — o modelo está aprendendo bem nos primeiros ciclos."
+      ],
+      "metadata": {
+        "id": "c3lv9E3ppvKM"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Épocas 6–17:\n",
+        "\n",
+        "*  Acurácia de validação oscila entre 87% e 89%\n",
+        "\n",
+        "*  Perda de validação cai de 0.36 para 0.29, com pequenas flutuações\n",
+        "\n",
+        "Aqui o modelo começa a refinar os pesos, mas já está próximo do plateau (estabilização da performance)."
+      ],
+      "metadata": {
+        "id": "N5a46lnUqbZK"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Épocas 18–24:\n",
+        "*  acurácia de treino subindo\n",
+        "*  validação estagnada ou oscilamdo pouco\n",
+        "*  val_loss sobe de 0.29 → 0.31 na época 24\n",
+        "\n",
+        "Isso pode indicar overfitting leve: o modelo está decorando mais do que generalizando."
+      ],
+      "metadata": {
+        "id": "FOFScaD0q811"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Épocas 25–30:\n",
+        "*  Acurácia de validação sobe até 90.1%\n",
+        "*  val_loss melhora: 0.284 → 0.275 (época 30)\n",
+        "\n",
+        "Apesar do risco anterior, o modelo ainda conseguiu melhorar. Então, nesse caso, o overfitting não foi crítico, o modelo está com uma boa generalização"
+      ],
+      "metadata": {
+        "id": "_5fwXKIzr4eJ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "---\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "whrxOzhdsaRS"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Para ter uma visualização mais clara, vou plotar as curvas de aprendizado"
+      ],
+      "metadata": {
+        "id": "84-VZOZnsboy"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "pd.DataFrame(historico.history).plot(figsize=(8,5))\n",
@@ -747,7 +963,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 451
+          "height": 434
         },
         "id": "iF4QS4vhElkc",
         "outputId": "5d5b97d8-6a11-47c8-b2ff-45897dafd119"
@@ -765,6 +981,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "A acurácia do treinamento e a acurácia de validação aumentam  progressivamente durante o treinamento enquanto a perda do treinamento e a perda da validação diminuem, o que é bom. Além disso as curvas de validação estão próximas das curvas de treinamento, o que indica que não há sobreajuste excessivo"
+      ],
+      "metadata": {
+        "id": "GMrLc2S0s0cx"
+      }
     },
     {
       "cell_type": "code",
@@ -802,10 +1027,28 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Ao utilizar o método evaluate, observa-se que a perda é baixa e a acurácia é alta, o que é um ótimo indicador"
+      ],
+      "metadata": {
+        "id": "LE2pr0BBu5jY"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## Fazendo predições com o modelo"
       ],
       "metadata": {
         "id": "nz10wkfxOabh"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Tentando preves as três primeiras instâncias do conjunto de teste"
+      ],
+      "metadata": {
+        "id": "mPFBUTRiwH5q"
       }
     },
     {
@@ -845,6 +1088,15 @@
           "execution_count": 103
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Na primeira instância, teve uma pequena dúvida sobre a bota e o tênis, o que faz sentido, já que são calçados. Mas A escolha gritante foi para a bota"
+      ],
+      "metadata": {
+        "id": "60vXTtI0whok"
+      }
     },
     {
       "cell_type": "code",
@@ -900,6 +1152,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "O modelo previu as classes Bota, Suéter e Calças respectivamente"
+      ],
+      "metadata": {
+        "id": "ZJ0QfIzwwyyv"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "plt.figure(figsize=(7.2, 2.4))\n",
@@ -932,6 +1193,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "O modelo classificou as três imagens corretamente!"
+      ],
+      "metadata": {
+        "id": "8hfPAtEAw_IW"
+      }
     }
   ]
 }
